force-app/main/default/objects/Supplier_Framework_Lot__c/Supplier_Framework_Lot__c.object-meta.xml
<CustomObject>
    <label>Framework Lot Supplier</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Framework Lot Suppliers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>