force-app/main/default/objects/Supplier_Framework_Lot__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <formula>HYPERLINK(Master_Framework_Lot__r.Master_Framework__r.Id, Master_Framework_Lot__r.Master_Framework__r.Name)</formula>
    <label>Framework</label>
    <type>Text</type>
</CustomField>