force-app/main/default/objects/Supplier_Framework_Lot__c/fields/Guarantor__c.field-meta.xml
<CustomField>
    <fullName>Guarantor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guarantor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Framework Lot Suppliers (Guarantor)</relationshipLabel>
    <relationshipName>Framework_Lot_Suppliers</relationshipName>
    <type>Lookup</type>
</CustomField>