force-app/main/default/objects/Supplier_Framework_Lot__c/fields/Master_Framework_Lot__c.field-meta.xml
<CustomField>
    <fullName>Master_Framework_Lot__c</fullName>
    <label>Framework Lot</label>
    <referenceTo>Master_Framework_Lot__c</referenceTo>
    <relationshipLabel>Framework Lot Suppliers</relationshipLabel>
    <relationshipName>Supplier_Framework_Lots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>