force-app/main/default/objects/Supplier_Framework_Lot__c/fields/RM_Number__c.field-meta.xml
<CustomField>
    <fullName>RM_Number__c</fullName>
    <description>Framework RM Number</description>
    <formula>HYPERLINK(Master_Framework_Lot__r.Master_Framework__r.Id, Master_Framework_Lot__r.Master_Framework__r.RM_Number__c)</formula>
    <inlineHelpText>Framework RM Number</inlineHelpText>
    <label>RM Number</label>
    <type>Text</type>
</CustomField>