force-app/main/default/objects/Supplier_Framework_Lot__c/fields/Spend_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Spend_To_Date__c</fullName>
    <label>Spend To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>