force-app/main/default/objects/Supplier_Framework_Lot__c/fields/Spend_To_Date_Last_Upload__c.field-meta.xml
<CustomField>
    <fullName>Spend_To_Date_Last_Upload__c</fullName>
    <inlineHelpText>The date the ‘spend to date’ was last uploaded from miso</inlineHelpText>
    <label>Spend To Date Last Upload</label>
    <type>Date</type>
</CustomField>