force-app/main/default/objects/Supplier_Framework_Lot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>* Live : Open contracts
* Expired : Closed and no more data to be received
* Suspended : legally suspended due to a breach of contract</description>
    <inlineHelpText>* Live : Open contracts
* Expired : Closed and no more data to be received
* Suspended : legally suspended due to a breach of contract

Only suppliers with status of &apos;Live&apos; will be shown on the website.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>