force-app/main/default/objects/Supplier_Framework_Lot__c/fields/Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code__c</fullName>
    <description>code for Finance (CODA) system</description>
    <label>Supplier Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>