force-app/main/default/objects/Supplier_Framework_Lot__c/fields/Supplier_Framework_Lot_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Framework_Lot_External_Id__c</fullName>
    <description>External Id (Not generated by Salesforce) used to allow matching to external reference numbers for data migration,</description>
    <externalId>true</externalId>
    <label>Supplier Framework Lot External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>