force-app/main/default/objects/Supplier_Framework_Lot__c/validationRules/Supplier_and_Guarantor_must_not_match.validationRule-meta.xml
<ValidationRule>
    <fullName>Supplier_and_Guarantor_must_not_match</fullName>
    <active>true</active>
    <description>The selection must not allow the same supplier record as has been chosen in the &apos;Supplier&apos; field</description>
    <errorConditionFormula>Supplier__c   =  Guarantor__c</errorConditionFormula>
    <errorDisplayField>Guarantor__c</errorDisplayField>
    <errorMessage>The Guarantor must not be the same Supplier as selected in the Supplier field</errorMessage>
</ValidationRule>